# pick-and-place-aims

./: README.md
aims-robots-all/: README.md
aims-robots-all/aims_environment/launch/: load_table_mh5.launch
aims-robots-all/aims_environment/urdf/: table_mh5.xacro
aims-robots-all/endeffectors/: README.md
aims-robots-all/endeffectors/schunk_pgn64_support/: package.xml
aims-robots-all/endeffectors/schunk_pgn64_support/launch/: load_pgn64.launch  test_pgn64.launch
aims-robots-all/endeffectors/schunk_pgn64_support/meshes/: pgn64_closed_collision.stl  pgn64_closed_visual.stl
aims-robots-all/endeffectors/schunk_pgn64_support/urdf/: mh5l_pgn64.xacro  mh5l_pgn64_macro.xacro  pgn64.gazebo  pgn64_macro.xacro
aims-robots-all/environment/mh5l_table/: README.md
aims-robots-all/environment/mh5l_table/launch/: load_mh5l_table.launch
aims-robots-all/environment/mh5l_table/urdf/: mh5l_pgn64_table.xacro  mh5l_pgn64_table_macro.xacro  mh5l_table.xacro  mh5l_table_macro.xacro  table_macro.xacro
aims-robots-all/lab_launchers/: CMakeLists.txt  package.xml
aims-robots-all/lab_launchers/launch/: cluster_moveit_default.launch  mh5l_moveit_default.launch  mh5l_pgn64_table_moveit.launch
aims-robots-all/motoman/: README.md
aims-robots-all/moveit/: README.md
aims-robots-all/moveit/motoman_mh5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aims-robots-all/moveit/motoman_mh5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman_mh5.srdf  ompl_planning.yaml
aims-robots-all/moveit/motoman_mh5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  motoman_mh5_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aims-robots-all/moveit/motoman_mh5l_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aims-robots-all/moveit/motoman_mh5l_moveit_config/config/: controllers.yaml  (+2 more)
aims-robots-all/moveit/robot_mh5l_pgn64_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aims-robots-all/moveit/robot_mh5l_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aims-robots-all/scripts_python/: README.md  fwd_kinematics_mh5l.py
pick-and-place/: CMakeLists.txt  package.xml
pick-and-place/mh5l_pgn64_table/launch/: load_mh5l_pgn64_table.launch  test_mh5l_pgn64_table.launch
pick-and-place/mh5l_pgn64_table/urdf/: mh5l_pgn64_table.xacro
pick-and-place/scripts/: Coordinate-angle.txt  Pose_rectangle_detection.py  continuous_rectangle_detection.py  pick-and-place.py  rectangle_detection.py  rectangle_support.py  robot_support.py
(+62 files in other folders)
