<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lab_launcher</name>
  <version>0.1.0</version>
  <description>
    <p>
        OSU AIMS Lab - Launcher Tools for Common Configurations
    </p>
    <p>
        This package contains configuration data and launch files
        for the common configurations in the AIMS Lab @ Ohio State.
      </p>
    <p>
        Before using any of the configuration files and / or meshes included
        in this package, be sure to check they are correct for the particular
        robot model(s) and configuration you intend to use them with.
      </p>
  </description>

  <!-- META DATA -->
  <license>BSD-Clause 4</license>
  <author email="acbuynak@gmail.com">acbuynak</author>
  <maintainer email="acbuynak@gmail.com">acbuynak</maintainer>

  <!-- DEPENDENCIES -->
  <!-- Run Depend's for all supported packages are not included to allow users
  to delete unneeded packages in this meta packate -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- PACKAGE IS NOT ARCHITECTURE-SPECIFIC ONCE COMPILED-->
  <export>
    <architecture_independent/>
  </export>
</package>
